<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:baselineAligned="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mahendri.permata2017.EditActivity"
    android:orientation="horizontal">

    <!-- Kategori -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/StyleKategori"
            android:text="@string/no_text"/>

        <TextView
            style="@style/StyleKategori"
            android:text="@string/payment_text"/>

        <TextView
            style="@style/StyleKategori"
            android:text="@string/name_text"/>

        <TextView
            style="@style/StyleKategori"
            android:text="@string/school_text"/>

        <TextView
            style="@style/StyleKategori"
            android:text="Paket"/>

        <TextView
            style="@style/StyleKategori"
            android:text="@string/hp_text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/id_edit_text"
            style="@style/StyleIsian"
            android:inputType="number"
            android:enabled="false" />

        <EditText
            android:id="@+id/bayar_edit_text"
            style="@style/StyleIsian"
            android:inputType="text"
            android:enabled="false"/>

        <EditText
            android:id="@+id/nama_edit_text"
            style="@style/StyleIsian"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/sekolah_edit_text"
            style="@style/StyleIsian"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/paket_edit_text"
            style="@style/StyleIsian"
            android:inputType="number"/>

        <EditText
            android:id="@+id/hp_edit_text"
            android:hint="@string/hp_hint"
            style="@style/StyleIsian" />
    </LinearLayout>
</LinearLayout>
