<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.mahendri.permata2017.SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_sim"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:id="@+id/pilihan_sim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_sim"
            android:textSize="12sp"
            android:textAppearance="?android:textAppearanceSmall"/>

        <TextView
            android:id="@+id/list_sim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textAppearance="?android:textAppearanceSmall"/>

    </LinearLayout>

    <TextView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/awal_db"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:id="@+id/numb_db_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"/>

    <TextView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_link"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:id="@+id/pay_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"/>

    <TextView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ticket_link"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:id="@+id/ticket_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"/>

</LinearLayout>
