<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mahendri.permata2017.SmsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/kotak_sms"
            android:layout_alignParentBottom="true"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="4"
            android:maxLength="2000"
            android:scrollHorizontally="false"
            android:hint="@string/sms_hint" />

        <Button
            android:id="@+id/kirim_manual_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorWhite"
            android:text="@string/sms_send_button" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Cari data-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_cari_no"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:fontFamily="sans-serif-light"
                android:textAppearance="?android:textAppearanceMedium"
                android:inputType="number"
                android:hint="@string/input_no_hint"/>

            <Button
                android:id="@+id/button_cari"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:background="@color/colorAccent"
                android:textColor="@color/colorWhite"
                android:text="@string/find_button"
                android:textAllCaps="true"/>
        </LinearLayout>

        <TextView
            android:id="@+id/peringatan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorPrimaryDark"
            android:visibility="invisible"
            android:text="@string/invalid_numb_text"/>

        <!--Nama yang akan dikirimi SMS-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_gravity="center"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="?android:textAppearanceSmall"
                android:text="@string/name_text"/>

            <EditText
                android:id="@+id/nama_konfirmasi"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:enabled="false"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
